--- a/Week3Project/style2.css
+++ b/Week3Project/style2.css
@@ -95,15 +95,16 @@ aside {
   }
   
   header {
+      
       grid-column: 1/3;
       grid-row: 1/2;
-      background-color: whitesmoke;
+      background-color: powderblue;
   }
   
   footer {
       grid-column: 1/3;
       grid-row: 3/4;
-      background-color: whitesmoke;
+      background-color: powderblue;
   }
   
   article {
